#-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- #
#Distributed under the OSI - approved Apache License, Version 2.0. See
#accompanying file Copyright.txt for details.
#-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- #

# add_executable(BITTE_BITTE JuleaEngineTest.cpp)
# target_link_libraries(BITTE_BITTE adios2)
# target_link_libraries(BITTE_BITTE PkgConfig::JULEA)

# add_executable(SIMPLE_STEPS SimpleStepTest.cpp)
# target_link_libraries(SIMPLE_STEPS adios2)
